fix: deposit dialog layout issue on desktop #122

--- a/frontend/src/styles/app.sass
+++ b/frontend/src/styles/app.sass
@@ -18,6 +18,7 @@
 .q-dark .banano-address
 	color: $primary
 
+// Filson Pro
 @import url('https://use.typekit.net/anu7hbq.css')
 @import url('https://fonts.googleapis.com/css?family=Amiri|Galada&display=swap')
 
@@ -30,13 +31,13 @@ body
 //	font-family: NeueHansKendrick
 //	src: url('/fonts/NeueHansKendrick-Regular.ttf')
 
-//@font-face
-//	font-family: OverpassMono
-//	src: url('/fonts/OverpassMono-Regular.ttf')
-//@font-face
-//	font-family: OverpassMono
-//	font-weight: bold
-//	src: url('/fonts/OverpassMono-Bold.ttf')
+@font-face
+	font-family: OverpassMono
+	src: url('/fonts/OverpassMono-Regular.ttf')
+@font-face
+	font-family: OverpassMono
+	font-weight: bold
+	src: url('/fonts/OverpassMono-Bold.ttf')
 
 .q-timeline__dot .q-icon
 	color: $secondary !important
